Fix small grammatical error in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 		<p><strong>Location:</strong> <span id="location"></span></p>
 		<p><strong>Protocol:</strong> <span id="protocol"></span></p>
 		<p>This page is served from a Node.js app that demonstrates how to redirect <code>http</code> traffic to <code>https</code> using the Express framework.</p>
-		<p>If you're seeing this page, the protocol should above should be <code>https</code> even if the original URL used <code>http</code>.</p>
+		<p>If you're seeing this page, the protocol above should be <code>https</code> even if the original URL used <code>http</code>.</p>
 
 		<hr>
 		<p>Git Repository: <a target="_blank" href="https://github.com/aerwin/https-redirect-demo">https://github.com/aerwin/https-redirect-demo</a></p>
